<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registro.RegistroFragment" android:id="@+id/cntRegistroConstraint">
    <EditText
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/etRegistroEmail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.572" app:layout_constraintVertical_bias="0.443"/>
    <EditText
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/etRegistroNombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.572" app:layout_constraintVertical_bias="0.327"/>
    <TextView
            android:layout_width="95dp"
            android:layout_height="39dp"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/registro_confirmpass"
            app:layout_constraintVertical_bias="0.677" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018" android:textColor="#151615" android:textStyle="bold"/>
    <TextView
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/registro_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02" app:layout_constraintVertical_bias="0.455"
            android:textColor="#151615" android:textStyle="bold"/>
    <TextView
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/registro_nombre"
            app:layout_constraintVertical_bias="0.34" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02" android:textColor="#151615" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTituloRegistro" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.07" android:text="@string/registro_tittle"
            android:textColor="#151615" android:textStyle="bold"/>
    <TextView
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/registro_user"
            app:layout_constraintVertical_bias="0.244" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021" android:textColor="#151615" android:textStyle="bold"/>
    <TextView
            android:layout_width="92dp"
            android:layout_height="25dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/registro_pass"
            app:layout_constraintVertical_bias="0.549" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018" android:textColor="#151615" android:textStyle="bold"/>
    <EditText
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/etRegistroUsuario"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.572" app:layout_constraintVertical_bias="0.239"/>
    <EditText
            android:layout_width="198dp"
            android:layout_height="37dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegistroPass"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="376dp"
            app:layout_constraintHorizontal_bias="0.553" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="198dp"
            android:layout_height="37dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegistroConfirm"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="376dp"
            app:layout_constraintHorizontal_bias="0.553" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.292"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintVertical_bias="0.901"/>
</androidx.constraintlayout.widget.ConstraintLayout>